# TobEgassem

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  test.yml
src/: log.py  main.py  tob.py
src/commands/: command.py  handler.py  server.py
src/utils/: font.py  log.py  utils.py
tests/: local_ai_openrouter.py  test_tob.py
