[project]
name = "tob"
version = "1.0.0"
description = "Tob is a discord bot that reverses 1/69 messages."
license = "MIT"
authors = [
  { name = "Anurag Shah", email = "anuragshah2000@gmail.com" },
  { name = "DaniPopes", email = "danipopes1@proton.me" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["discord", "bot"]
dependencies = [
  "aiohttp>=3.9,<4",
  "colorama>=0.4,<0.5",
  "discord>=2.0,<3",
  "python-dotenv>=0.21,<2",
  "tweepy>=4.10,<5",
]

[project.urls]
Homepage = "https://github.com/Anurag-Shah/TobEgassem"
Repository = "https://github.com/Anurag-Shah/TobEgassem"

[dependency-groups]
dev = [
  "black>=25.0",
  "pytest>=9.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''

[tool.pytest.ini_options]
pythonpath = [".", "src"]
